[package]
name = "imap_bodystructure"
version = "0.2.3"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Analyzing the BODYSTRUCTURE data stream within the IMAP protocol, based on Nom."
repository = "https://github.com/coalooball/imap_bodystructure"
readme = "README.md"

[dependencies]
nom = "7.1.3"
